- Atlantian standard bearers now separated class from regular infantry and has limit of one unit, so frog flags are down. Atlantian standards is also a weapon now, so no more handfight.
- Added hands and claws as a primitive-themed weapons for atlantians as honor for the loss of a useless flag parade.

=============================
0.8.0-DEV1 (20th August 2022)
----------------------------------------------------------
Note: from this version its NatGen-N, however it includes some unreleased features. Should put N somewhere in the version number lol.

Code
----------------------------------------------------------
- Fixed some errors in srctest caused by wrong package declaration and missing imports
- Added txt file to help people in figuring out how to open and run the project. And ToDo list to help indev (working without issues pages)
- Through eternal suffering project is now runnable and buildable
- Changed version of NatGen to 0.8.0DEV and renewed some labels
- Program now writes an amount of time spent for generation after it is completed (was made for 0.7.13)
- Dominions database updated up to v5.57
- Magic:Access button was fixed, now it doesn't return MageWithAccess restriction as it did for some reason (was made for 0.7.13)
- Now writing more info into nation description
- Sacred power slider now impacts sacred units stats, not only average divan level of priests. (boost is roughly 1.5 per slider step)

Content 
-----------------------------------------------------------
- Nadir and dustwalkers got nerf to dust (gold cost incr for both, rp incr for nadir)
- Zots are finally grounded and can rest
- Crabmans got nerfed cuz they are too protected and have great morale. baseprot (15->10), mor (13->9), added ressize 4.
- Added new primitive theme for crabmans as well as theme chance redone. Plus crabs can be naked. Getting low-tech themes chance is high.