@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>NationGen 0.5.0.09E</name>
+	<name>NationGen-N</name>
 	<comment></comment>
 	<projects>
 	</projects>
