@@ -92,7 +92,7 @@
 
 #new
 #name "Dirge Slave"
-#command "#copyspell 'Chorus Master'"
+#command "#copyspell 'Chorus Slave'"
 #command "#name 'Dirge Slave'"
 #command "#path 0 5"
 #command "#path 1 -1"
